# LightDraw

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: 120lights_forward_noshadow_1024x768.txt  120lights_forward_noshadow_1920x1080.txt  120lights_forward_shadow_1024x768.txt  120lights_lidr_noshadow_1920x1080.txt  120lights_lidr_noshadow_3840x2160.txt  120lights_lidr_shadow_1920x1080.txt  120lights_lidr_shadow_3840x2160.txt  15lights_forward_noshadow_1920x1080.txt  15lights_forward_noshadow_3840x2160.txt  15lights_forward_shadow_1920x1080.txt  15lights_lidr_noshadow_1920x1080.txt  15lights_lidr_noshadow_3840x2160.txt  15lights_lidr_shadow_1920x1080.txt  15lights_lidr_shadow_3840x2160.txt  196lights_frametime_vs_swaptime_lidr_noshadow_1024x768.txt  196lights_frametime_vs_swaptime_lidr_noshadow_1024x768_withflush.txt  196lights_frametime_vs_swaptime_lidr_noshadow_3840x2160.txt  196lights_frametime_vs_swaptime_lidr_noshadow_3840x2160_withflush.txt  196lights_lidr_noshadow_1024x768.txt  196lights_lidr_noshadow_1920x1080.txt  196lights_lidr_noshadow_3840x2160.txt  196lights_lidr_shadow_1920x1080.txt  196lights_lidr_shadow_3840x2160.txt  30lights_forward_noshadow_1024x768.txt  30lights_lidr_noshadow_1024x768.txt  30lights_lidr_noshadow_1920x1080.txt  30lights_lidr_noshadow_3840x2160.txt  30lights_lidr_shadow_1024x768.txt  30lights_lidr_shadow_1920x1080.txt  30lights_lidr_shadow_3840x2160.txt  5lights_forward_shadow_1024x768.txt  5lights_lidr_noshadow_1920x1080.txt  5lights_lidr_noshadow_3840x2160.txt  5lights_lidr_shadow_1024x768.txt  5lights_lidr_shadow_1920x1080.txt  5lights_lidr_shadow_3840x2160.txt  60lights_forward_noshadow_1920x1080.txt  60lights_forward_noshadow_3840x2160.txt  60lights_forward_shadow_3840x2160.txt  60lights_lidr_noshadow_1920x1080.txt  (+6 more)
benchmark/no_vsync/: 120lights_forward_noshadow_3840x2160.txt  120lights_forward_shadow_1920x1080.txt  120lights_forward_shadow_3840x2160.txt  120lights_lidr_noshadow_1024x768.txt  120lights_lidr_noshadow_1920x1080.txt  120lights_lidr_shadow_1024x768.txt  120lights_lidr_shadow_1920x1080.txt  15lights_forward_noshadow_1024x768.txt  15lights_forward_shadow_1024x768.txt  15lights_forward_shadow_3840x2160.txt  15lights_lidr_noshadow_1024x768.txt  15lights_lidr_noshadow_1920x1080.txt  15lights_lidr_noshadow_3840x2160.txt  15lights_lidr_shadow_1024x768.txt  15lights_lidr_shadow_1920x1080.txt  196lights_forward_noshadow_1024x768.txt  196lights_forward_noshadow_1920x1080.txt  196lights_forward_noshadow_3840x2160.txt  196lights_forward_shadow_1024x768.txt  196lights_forward_shadow_1920x1080.txt  196lights_forward_shadow_3840x2160.txt  196lights_lidr_noshadow_1024x768.txt  196lights_lidr_noshadow_1920x1080.txt  196lights_lidr_shadow_1024x768.txt  196lights_lidr_shadow_1920x1080.txt  30lights_forward_noshadow_1920x1080.txt  30lights_forward_noshadow_3840x2160.txt  30lights_forward_shadow_1024x768.txt  30lights_forward_shadow_1920x1080.txt  30lights_forward_shadow_3840x2160.txt  30lights_lidr_noshadow_1024x768.txt  30lights_lidr_noshadow_1920x1080.txt  30lights_lidr_noshadow_3840x2160.txt  30lights_lidr_shadow_1024x768.txt  30lights_lidr_shadow_1920x1080.txt  30lights_lidr_shadow_3840x2160.txt  5lights_forward_noshadow_1024x768.txt  5lights_forward_noshadow_1920x1080.txt  5lights_forward_noshadow_3840x2160.txt  5lights_forward_shadow_1920x1080.txt  (+17 more)
benchmark/shadow_caching/: 120lights_lidr_noshadow_3840x2160.txt  120lights_lidr_shadow_3840x2160.txt  120lights_lidr_shadowcache_3840x2160.txt  15lights_lidr_shadow_3840x2160.txt  15lights_lidr_shadowcache_3840x2160.txt  196lights_lidr_noshadow_3840x2160.txt  196lights_lidr_shadow_3840x2160.txt  196lights_lidr_shadowcache_3840x2160.txt  30lights_lidr_shadowcache_3840x2160.txt  5lights_lidr_shadowcache_3840x2160.txt  60lights_lidr_shadowcache_3840x2160.txt  makegraphs.py
inc/: animation.h  assimpcamera.h  binvox.h  bitmap.h  camera.h  chunk.h  cube.h  cull.h  fpscamera.h  gl.h  glfw_config.h  glt.h  input.h  lidr.h  light.h  material.h  mesh.h  node.h  recorder.h  scene.h  scenegraph.h  shaderlib.h  vertex.h  voxel.h
paper/: LIDR_detailed.md  LightDrawDesignandImplementation.md  blah.md
shaders/: depth.frag  depth.fs  depth.vert  depth.vs  flat.frag  flat.fs  flat.vert  flat.vs  forward.frag  forward.vert  lidr.vert  lidr.vs  lidr_light.frag  lidr_light.fs  light.fs  lightvolume.frag  lightvolume.fs  lightvolume.vert  lightvolume.vs  point_shadow.frag  point_shadow.geom  point_shadow.vs  quad.fs  quad.geom  quad.vs  shadow.frag  shadow.fs  shadow.vert  shadow.vs  shadow_direction.frag  spotlight_shadow.vert  viewport.frag  viewport.fs  viewport.vert  viewport.vs  voxel.fs  voxel.vs
src/: animation.cpp  assimpcamera.cpp  assimpgraph.cpp  bitmap.cpp  camera.cpp  chunk.cpp  cull.cpp  fpscamera.cpp  glt.cpp  input.cpp  lidr.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  node.cpp  recorder.cpp  scene.cpp  scenegraph.cpp  shaderlib.cpp  vertex.cpp  voxel.cpp
